[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/Game_UI.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Test_Player.gd" type="Script" id=2]
[ext_resource path="res://assets/png/new_basic_walk.png" type="Texture" id=3]
[ext_resource path="res://scripts/Timer.gd" type="Script" id=4]
[ext_resource path="res://assets/png/Coin_spin.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 6.25 )

[sub_resource type="Animation" id=8]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ SubResource( 7 ) ]
}

[sub_resource type="CanvasItemMaterial" id=13]
particles_animation = true
particles_anim_h_frames = 18
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="ParticlesMaterial" id=14]
emission_shape = 5
emission_ring_radius = 5.0
emission_ring_inner_radius = 0.0
emission_ring_height = 1.0
flag_disable_z = true
direction = Vector3( 0.5, -2, 0 )
spread = 0.0
gravity = Vector3( 0, 300, 0 )
initial_velocity = 150.0
initial_velocity_random = 0.14
angular_velocity = 281.45
angular_velocity_random = 0.64
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 18.18
radial_accel = 66.34
radial_accel_random = 0.62
damping = 2.93
angle_random = 1.0
anim_speed = 2.0

[sub_resource type="AnimatedTexture" id=15]
frame_0/texture = ExtResource( 5 )

[node name="Test_Player" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
scale = Vector2( 1.6, 1.6 )
shape = SubResource( 1 )

[node name="Player_Camera" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true

[node name="Game_UI" parent="Player_Camera" instance=ExtResource( 1 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Player = SubResource( 8 )

[node name="Tween" type="Tween" parent="."]

[node name="Player_Timer" type="Timer" parent="."]
one_shot = true
script = ExtResource( 4 )

[node name="Coin_Particle" type="Particles2D" parent="."]
material = SubResource( 13 )
scale = Vector2( 0.5, 0.5 )
emitting = false
amount = 3
lifetime = 1.5
one_shot = true
speed_scale = 2.0
explosiveness = 0.9
randomness = 0.75
process_material = SubResource( 14 )
texture = SubResource( 15 )

[connection signal="timeout" from="Player_Timer" to="Player_Camera/Game_UI" method="_on_Timer_timeout"]
[connection signal="timeout" from="Player_Timer" to="Player_Timer" method="_on_Timer_timeout"]
